--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>
-      This is a wip website
+        //This website has no real purpose at the moment and is simply only being used as a playground for me to learn coding. Although it will be used in the future as my portfolio//
     </h1>
 </body>
 </html>
