--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <h1>
-        //This website has no real purpose at the moment and is simply only being used as a playground for me to learn coding. Although it will be used in the future as my portfolio//
-    </h1>
-</body>
+    <head>
+        <title>Glacier National Park</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+    </head>
+        <body>
+            <div class="Header">
+                <img class="logo" src="WebsiteImages\GNPLogoNoBorder.png" with="70" height="70" alt="logo">
+                <h2 class="logo_text">Glacier National Park</h2>
+                <nav>
+                    <ul class="nav_links">
+                        <li><a href="#">Reserve</a></li>
+                        <li><a href="#">Trails</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </nav>
+                <a class="cta" href="#"><button>Contact</button></a>
+            </div>
+            
+            <div class="container">
+                <img class="MainImage" src="\WebsiteImages\WebsiteBackgroundImage.png" alt="Main Background Image">
+                <div class="centered"><b>Glacier National Park</b></div>
+                <div class="centeredLow">Unofficial website</div>
+                <img class="DownArrow" src="\WebsiteImages\ArrowDown.png" alt="Down Image">
+            </div>  
+        </body>
 </html>
